--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-contenteditable": "^3.3.6",
+    "react-data-table-component": "^6.11.8",
     "react-dom": "^17.0.2",
+    "react-edit-text": "^4.1.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
