--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-contenteditable": "^3.3.6",
     "react-data-table-component": "^6.11.8",
     "react-dom": "^17.0.2",
