--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-data-table-component": "^6.11.8",
     "react-dom": "^17.0.2",
     "react-edit-text": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
