--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-contenteditable": "^3.3.6",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-edit-text": "^4.1.0",
     "react-scripts": "4.0.3",
+    "rich-markdown-editor": "^11.17.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
